Update contact links and diary entries

--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
             
             <div class="contact-options">
                 <a href="mailto:thegurjararyan@gmail.com?subject=Access%20Request%20for%20Vault" class="contact-btn"><i class="fa-solid fa-envelope"></i> Email Request</a>
-                <a href="https://t.me/thegurjaryan" target="_blank" class="contact-btn"><i class="fa-brands fa-telegram"></i> Message on Telegram</a>
+                <a href="https://t.me/thegurjararyan" target="_blank" class="contact-btn"><i class="fa-brands fa-telegram"></i> Message on Telegram</a>
             </div>
 
             <div class="passcode-section">
@@ -396,11 +396,11 @@
                 <h1>AryanArchives</h1>
                 <p>@thegurjararyan | Poet. Coder. Observer.</p>
                 <div class="social-links">
-                    <a href="#" class="social-btn"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="#" class="social-btn"><i class="fa-brands fa-twitter"></i></a>
-                    <a href="#" class="social-btn"><i class="fa-brands fa-telegram"></i></a>
-                    <a href="#" class="social-btn"><i class="fa-brands fa-snapchat"></i></a>
-                    <a href="#" class="social-btn"><i class="fa-brands fa-github"></i></a>
+                    <a href="https://www.instagram.com/thegurjararyan" class="social-btn"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://www.x.com/thegurjararyan" class="social-btn"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="https://t.me/thegurjararyan" class="social-btn"><i class="fa-brands fa-telegram"></i></a>
+                    <a href="https://www.snapchat.com/@thegurjararyan" class="social-btn"><i class="fa-brands fa-snapchat"></i></a>
+                    <a href="https://www.github.com/thegurjararyan" class="social-btn"><i class="fa-brands fa-github"></i></a>
                 </div>
             </div>
         </div>
@@ -444,8 +444,8 @@
         { 
             type: "Locked", 
             date: "2:18 AM", 
-            title: "Twisted Pain", 
-            content: "And What should I tell you about the beauteous time We had together or the memories that turned nightmares after we parted.\nEven if loving from everything I had isn't enough, maybe what I thought was love is just twisted form of pain and patience can help you gain things, not people.\n\nDon't know if its good or really bad, but here it is...\nAnd we're there out in the cold midnight, But looking at your eyes, and your body all I can see was wild flames of fire.\nHolding your neck in my hand I grabbed you for kiss but I didn't, grunting madly you bit my lips, and I put my hand in your top.\nAs I dabbing my fingers from your mouth to your hair... And in no time you wanna grab something too. Always an impatient bad girl ain't you?\nBut not today. It's already drenching. Pressing and squeezing it hard and your moans defying the utter silence of park."
+            title: "horny night", 
+            content: "And we're there out in the cold midnight, But looking at your eyes, and your body all I can see was wild flames of fire.\nHolding your neck in my hand I grabbed you for kiss but I didn't, grunting madly you bit my lips, and I put my hand in your top.\nAs I dabbing my fingers from your mouth to your hair... And in no time you wanna grab something too. Always an impatient bad girl ain't you?\nBut not today. It's already drenching. Pressing and squeezing it hard and your moans defying the utter silence of park."
         },
         { 
             type: "Locked", 
@@ -454,11 +454,11 @@
             content: "I MEAN YEA I LOVE CURVES AND THOSE BOUNCY THINGS BUT\nWHAT IF SHE GOT RED HAIRS\nBUT ISN'T A BITCH\nSHE KNOWS THE FUCKIN TACTICS\nBUT STILL HUMAN\nWE DO BDSM AT NIGHT\nSTUDY PHILOSOPHY AND CHALLENGE IDEAS BY DAY\nSHE KNOWS FINANCES\nBUT KNOWS IT JUST NOT ABOUT MONEY\nWE LOVE EACH OTHER\nBUT STILL INDEPENDENT\nKNOW WHEN TO SWITCH\nFROM BRAINROTS TO FUCKIN INTELLECTS\nWE DANCE TO EXTREMES\nFROM INTELLIGENCE TO MADNESS"
         },
         { 
-            type: "Locked", 
-            date: "Unknown", 
-            title: "Spoil The Child", 
-            content: "oh babe❤️,\nI know its been so long\nand we have been through the dark\nbut now I want to give you the Stars ✨,\n\nI wanna,\nspoil the child inside you\nlisten to the things\nyou never told anyone about,\nmake you feel loved\nlike you always dreamed of.\nI want our souls to collide\nthrough the skin while we hug\nthe slow kisses,\nthe loud moans"
-        },
+    type: "Locked", 
+    date: "Unknown", 
+    title: "The Main Course", 
+    content: "Her face lookin so innocent \nHer body did not\n\nI was just wondering about \nThe curves she got \nI was lookin for the snack\nShe was fckin main course\n\nI asked her n she refused \nBut she wasn't thing to let go of\n\"A chance , I'll be gentle\"\nI said \n\nShe laughed ! And ther we go\nShe pulled in my shirt\n\"You really want this lil  Boy \"she said,\n\"Yes mommy !\"\nOur lips met and \nI want it all \n\n My hands on her neck\nHer dabing my back \nIts turnin me on\nHer hands exploring through my shorts\nMe Pressing those titties feelin so good\nI want a taste now\nIt was an ol style blouse\nW lots of buttons at the front and\nShe opened em all for me\n\"They are all yours ,my boy \" She said\nIt was big n beautiful,\nI kissed the brown nip\nAnd start suckin ,Like a good boy\n\nShe was moaning \nAnd kept pushing me inside\nI put my hands in."
+},,
         
         // --- DIARY ENTRIES ---
         { type: "Diary Entry", date: "03-Nov-2022", title: "The Unfinished Project", content: "It's been more than a week, still I couldn't sleep any better. The memories keeps flashing into my head. There's a lot to do and I have to work on but I don't know how but whenever I am alone they come back everything seems to be deserted.\n\nI am loosing hopes from everywhere, now even if something good is happening I can't enjoy it. It seems like a prison, I am trapped inside me I can't seem to escape it.\n\nSometimes I want to cry but can't. I have read and listened about what happening to me but have never imagined that even the selfish, cold hearted person like me will shed tears for someone." },
